create alpha page :pencil2:
created new page for alpha

--- a/index.html
+++ b/index.html
@@ -4,92 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link rel="icon" href="images/kb-logo.png"-->
-    <title>Alpha Description</title>
+    <title>Alpha</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Alpha Description</h1>
-    <video width="900" controls>
-        <source src="goodreads-microinteraction.mp4" type="video/mp4">
-    </video>
-    <h3>Trigger</h3>
-    <p>Want to Read- Default</p>
-    <ul>
-        <li>Hover ON</li>
-        <ul>
-            <li>2 second delay</li>
-        </ul>
-        <li>Hover OFF</li>
-        <li>Mouse UP</li>
-        <ul>
-            <li>0.2 second delay</li>
-        </ul>
-    </ul>
-    <p>Want to Read- Active</p>
-    <ul>
-        <li>Hover ON</li>
-        <ul>
-            <li>2 second delay</li>
-        </ul>
-        <li>Hover OFF</li>
-        <li>Mouse UP</li>
-        <ul>
-            <li>0.2 second delay</li>
-        </ul>
-    </ul>
-    <h3>Rules</h3>
-    <p>Want to Read- Default</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger and  background becomes 10% darker</li>
-        <ul>
-            <li>2 second delay- "Add to your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer and background changes back to 10% lighter</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 100 px and content changes to a checkmark with the text "Want to Read"</li>
-        </ul>
-        <li>Database record flag set to true</li>
-    </ul>
-    <p>Want to Read- Active</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger</li>
-        <ul>
-            <li>2 second delay- "Remove from your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 80 px and text changes to "Want to Read"</li>
-        </ul>
-        <li>Database record flag set to false</li>
-    </ul>
-    <h3>Feedback</h3>
-    <p>Want to Read- Default</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger and  background becomes 10% darker</li>
-        <ul>
-            <li>2 second delay- "Add to your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer and background changes back to 10% lighter</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 100 px and content changes to a checkmark with the text "Want to Read"</li>
-        </ul>
-    </ul>
-    <p>Want to Read- Active</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger</li>
-        <ul>
-            <li>2 second delay- "Remove from your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 80 px and text changes to "Want to Read"</li>
-        </ul>
-    </ul>
-    <h3>Loops &#38; Modes</h3>
-    <p>None</p>
+    <a href="alpha.html">Alpha</a>
 </body>
 </html>
