edit sitemap :pencil2:
organized pages to follow assignment requirements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="idm241.html">IDM241</a>
+    <a href="idm241/alpha.html">Alpha</a>
 </body>
 </html>
