index css :lipstick:
stylized link to alpha

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="idm241/alpha.html">Alpha</a>
+    <div class="nav">
+    <a href="idm241/alpha.html"><h2>Alpha</h2></a>
+    </div>
 </body>
 </html>
