--- a/idm241/alpha.html
+++ b/idm241/alpha.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Alpha Description</h1>
+    <h1>Alpha</h1>
     <video width="900" controls>
         <source src="goodreads-microinteraction.mp4" type="video/mp4">
     </video>
