--- a/idm241/alpha.html
+++ b/idm241/alpha.html
@@ -3,93 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link rel="icon" href="images/kb-logo.png"-->
+    <link rel="icon" href="alpha.png">
     <title>Alpha</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Alpha</h1>
-    <video width="900" controls>
+    <div class="video">
+    <video width="900px" controls>
         <source src="goodreads-microinteraction.mp4" type="video/mp4">
     </video>
-    <h3>Trigger</h3>
-    <p>Want to Read- Default</p>
-    <ul>
-        <li>Hover ON</li>
+    </div>
+    <div class="description">
+        <div class="trigger">
+        <h3>Trigger</h3>
+        <p>Want to Read- Default</p>
         <ul>
-            <li>2 second delay</li>
+            <li>Hover ON</li>
+            <ul>
+                <li>2 second delay</li>
+            </ul>
+            <li>Hover OFF</li>
+            <li>Mouse UP</li>
+            <ul>
+                <li>0.2 second delay</li>
+            </ul>
         </ul>
-        <li>Hover OFF</li>
-        <li>Mouse UP</li>
+        <p>Want to Read- Active</p>
         <ul>
-            <li>0.2 second delay</li>
+            <li>Hover ON</li>
+            <ul>
+                <li>2 second delay</li>
+            </ul>
+            <li>Hover OFF</li>
+            <li>Mouse UP</li>
+            <ul>
+                <li>0.2 second delay</li>
+            </ul>
         </ul>
-    </ul>
-    <p>Want to Read- Active</p>
-    <ul>
-        <li>Hover ON</li>
+        </div>
+        <div class="rules">
+        <h3>Rules</h3>
+        <p>Want to Read- Default</p>
         <ul>
-            <li>2 second delay</li>
+            <li>Hover ON- Cursor changes to finger and  background becomes 10% darker</li>
+            <ul>
+                <li>2 second delay- "Add to your to-read shelf." appears as tagline</li>
+            </ul>
+            <li>Hover OFF- Cursor changes back to pointer and background changes back to 10% lighter</li>
+            <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
+            <ul>
+                <li>0.2 second delay- Button width changes to 100 px and content changes to a checkmark with the text "Want to Read"</li>
+            </ul>
+            <li>Database record flag set to true</li>
         </ul>
-        <li>Hover OFF</li>
-        <li>Mouse UP</li>
+        <p>Want to Read- Active</p>
         <ul>
-            <li>0.2 second delay</li>
+            <li>Hover ON- Cursor changes to finger</li>
+            <ul>
+                <li>2 second delay- "Remove from your to-read shelf." appears as tagline</li>
+            </ul>
+            <li>Hover OFF- Cursor changes back to pointer</li>
+            <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
+            <ul>
+                <li>0.2 second delay- Button width changes to 80 px and text changes to "Want to Read"</li>
+            </ul>
+            <li>Database record flag set to false</li>
         </ul>
-    </ul>
-    <h3>Rules</h3>
-    <p>Want to Read- Default</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger and  background becomes 10% darker</li>
+        </div>
+        <div class="feedback">
+        <h3>Feedback</h3>
+        <p>Want to Read- Default</p>
         <ul>
-            <li>2 second delay- "Add to your to-read shelf." appears as tagline</li>
+            <li>Hover ON- Cursor changes to finger and  background becomes 10% darker</li>
+            <ul>
+                <li>2 second delay- "Add to your to-read shelf." appears as tagline</li>
+            </ul>
+            <li>Hover OFF- Cursor changes back to pointer and background changes back to 10% lighter</li>
+            <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
+            <ul>
+                <li>0.2 second delay- Button width changes to 100 px and content changes to a checkmark with the text "Want to Read"</li>
+            </ul>
         </ul>
-        <li>Hover OFF- Cursor changes back to pointer and background changes back to 10% lighter</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
+        <p>Want to Read- Active</p>
         <ul>
-            <li>0.2 second delay- Button width changes to 100 px and content changes to a checkmark with the text "Want to Read"</li>
+            <li>Hover ON- Cursor changes to finger</li>
+            <ul>
+                <li>2 second delay- "Remove from your to-read shelf." appears as tagline</li>
+            </ul>
+            <li>Hover OFF- Cursor changes back to pointer</li>
+            <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
+            <ul>
+                <li>0.2 second delay- Button width changes to 80 px and text changes to "Want to Read"</li>
+            </ul>
         </ul>
-        <li>Database record flag set to true</li>
-    </ul>
-    <p>Want to Read- Active</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger</li>
-        <ul>
-            <li>2 second delay- "Remove from your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 80 px and text changes to "Want to Read"</li>
-        </ul>
-        <li>Database record flag set to false</li>
-    </ul>
-    <h3>Feedback</h3>
-    <p>Want to Read- Default</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger and  background becomes 10% darker</li>
-        <ul>
-            <li>2 second delay- "Add to your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer and background changes back to 10% lighter</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 100 px and content changes to a checkmark with the text "Want to Read"</li>
-        </ul>
-    </ul>
-    <p>Want to Read- Active</p>
-    <ul>
-        <li>Hover ON- Cursor changes to finger</li>
-        <ul>
-            <li>2 second delay- "Remove from your to-read shelf." appears as tagline</li>
-        </ul>
-        <li>Hover OFF- Cursor changes back to pointer</li>
-        <li>Mouse UP- Button width changes to 55 px and text changes to "saving..."</li>
-        <ul>
-            <li>0.2 second delay- Button width changes to 80 px and text changes to "Want to Read"</li>
-        </ul>
-    </ul>
-    <h3>Loops &#38; Modes</h3>
-    <p>None</p>
+        </div>
+        <div class="loops-and-modes">
+        <h3>Loops &#38; Modes</h3>
+        <p>None</p>
+        </div>
+    </div>
 </body>
 </html>
