more description :pencil2:
added title to video and link to goodreads

--- a/idm241/alpha.html
+++ b/idm241/alpha.html
@@ -10,9 +10,11 @@
 <body>
     <h1>Alpha</h1>
     <div class="video">
-    <video width="900px" controls>
-        <source src="goodreads-microinteraction.mp4" type="video/mp4">
-    </video>
+        <h3>Existing Microinteraction</h3>
+        <a href="https://www.goodreads.com/recommendations"><p>Link to existing microinteraction</p></a>
+        <video width="900px" controls>
+            <source src="goodreads-microinteraction.mp4" type="video/mp4">
+        </video>
     </div>
     <div class="description">
         <div class="trigger">
