--- a/idm241/alpha.html
+++ b/idm241/alpha.html
@@ -11,7 +11,7 @@
     <h1>Alpha</h1>
     <div class="video">
         <h3>Goodreads "Want to Read" Button</h3>
-        <a href="https://www.goodreads.com/recommendations"><p>Link to existing microinteraction</p></a>
+        <a href="https://www.goodreads.com/recommendations" target="_blank"><p>Link to existing microinteraction</p></a>
         <video width="900px" controls>
             <source src="goodreads-microinteraction.mp4" type="video/mp4">
         </video>
