add nav :pencil2:
added navigation to alpha build from index page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="nav">
     <a href="idm241/alpha.html"><h2>Alpha</h2></a>
+    <a href="idm241/alpha/build.html"><h2>Alpha Build</h2></a>
     </div>
 </body>
 </html>
