alpha button click :zap:
beginning of microinteractions

--- a/idm241/alpha/build.html
+++ b/idm241/alpha/build.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Alpha Build</h1>
-    <div class="title">
-        <a href="https://www.goodreads.com/recommendations" target="_blank"><h3>Goodreads "Want to Read" Button</h3></a>
+    <div class="alpha-button">
+        <button title="Add to your to-read shelf.">Want to Read</button>
     </div>
     <div class="description">
         <div class="trigger">
@@ -161,14 +161,6 @@
             <p>None</p>
         </div>
     </div>
-    <div class="video">
-        <h3>Video</h3>
-        <video width="900px" controls>
-            <source src="../goodreads-microinteraction.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div class="space">
-    <p>&nbsp;</p>
-    </div>
+    <script src="alpha.js"></script>
 </body>
 </html>
