fix typo :pencil2:
change "Trigger" to "Triggers"

--- a/idm241/alpha/build.html
+++ b/idm241/alpha/build.html
@@ -14,7 +14,7 @@
     </div>
     <div class="description">
         <div class="trigger">
-        <h3>Trigger</h3>
+        <h3>Triggers</h3>
         <p>Want to Read- Default</p>
         <ul>
             <li>Hover ON</li>
