--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="nav">
     <a href="idm241/alpha.html"><h2>Alpha</h2></a>
     <a href="idm241/alpha/build.html"><h2>Alpha Build</h2></a>
+    <a href="idm241/beta.html"><h2>Beta</h2></a>
     </div>
 </body>
 </html>
