Update Beta Description :pencil2:
wrote descriptions for each beta microinteraction

--- a/idm241/beta.html
+++ b/idm241/beta.html
@@ -20,26 +20,14 @@
             <p>Want to Read- Default</p>
             <ul>
                 <li>Hover ON</li>
-                <ul>
-                    <li>2 second delay</li>
-                </ul>
                 <li>Hover OFF</li>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>0.2 second delay</li>
-                </ul>
             </ul>
             <p>Want to Read- Active</p>
             <ul>
                 <li>Hover ON</li>
-                <ul>
-                    <li>2 second delay</li>
-                </ul>
                 <li>Hover OFF</li>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>0.2 second delay</li>
-                </ul>
             </ul>
             </div>
             <div class="wtr-rules">
@@ -49,27 +37,14 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>Background becomes 10% darker</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Add to your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
-                    <li>Background changes back to 10% lighter</li>
                 </ul>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>Database record flag is set to true</li>
-                </ul>
-                <ul>
-                    <li>0.2 second delay</li>
                     <ul>
-                        <li>Button width changes to 100 px</li>
+                        <li>Button width changes to 135 px</li>
                         <li>Content changes to a checkmark with the text "Want to Read"</li>
                     </ul>
                 </ul>
@@ -79,10 +54,6 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Remove from your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
@@ -90,14 +61,8 @@
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>Database record flag is set to false</li>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 80 px</li>
-                        <li>Text changes to "Want to Read"</li>
-                    </ul>
+                    <li>Button width changes to 116 px</li>
+                    <li>Text changes to "Want to Read"</li>
                 </ul>
             </ul>
             </div>
@@ -108,26 +73,14 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>Background becomes 10% darker</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Add to your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
-                    <li>Background changes back to 10% lighter</li>
                 </ul>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                </ul>
-                <ul>
-                    <li>0.2 second delay</li>
                     <ul>
-                        <li>Button width changes to 100 px</li>
+                        <li>Button width changes to 135 px</li>
                         <li>Content changes to a checkmark with the text "Want to Read"</li>
                     </ul>
                 </ul>
@@ -137,10 +90,6 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Remove from your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
@@ -148,13 +97,8 @@
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 80 px</li>
-                        <li>Text changes to "Want to Read"</li>
-                    </ul>
+                    <li>Button width changes to 116 px</li>
+                    <li>Text changes to "Want to Read"</li>
                 </ul>
             </ul>
             </div>
@@ -167,144 +111,101 @@
             <h2>Stars Rating</h2>
             <div class="stars-triggers">
             <h3>Triggers</h3>
-            <p>Want to Read- Default</p>
+            <p>Star Rating- Default</p>
             <ul>
-                <li>Hover ON</li>
-                <ul>
-                    <li>2 second delay</li>
-                </ul>
-                <li>Hover OFF</li>
+                <li>Hover ON Star</li>
+                <li>Hover OFF Stars</li>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>0.2 second delay</li>
-                </ul>
             </ul>
-            <p>Want to Read- Active</p>
+            <p>Star Rating- Active</p>
             <ul>
-                <li>Hover ON</li>
-                <ul>
-                    <li>2 second delay</li>
-                </ul>
-                <li>Hover OFF</li>
-                <li>Mouse UP</li>
-                <ul>
-                    <li>0.2 second delay</li>
-                </ul>
+                <li>Hover ON Star</li>
+                <li>Hover OFF Stars</li>
+                <li>Mouse UP on Last Orange Star</li>
+                <li>Mouse UP on Star That is Not the Last Orange Star</li>
             </ul>
             </div>
             <div class="stars-rules">
             <h3>Rules</h3>
-            <p>Want to Read- Default</p>
+            <p>Star Rating- Default</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>Background becomes 10% darker</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Add to your to-read shelf." appears as tagline</li>
-                    </ul>
+                    <li>Fills in hovered on Star with yellow along with all the stars in front of it</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
-                    <li>Background changes back to 10% lighter</li>
+                    <li>All stars go back to gray</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>Database record flag is set to true</li>
-                </ul>
-                <ul>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 100 px</li>
-                        <li>Content changes to a checkmark with the text "Want to Read"</li>
-                    </ul>
+                    <li>Fills in clicked on star with orange along with all the stars in front of it</li>
                 </ul>
             </ul>
-            <p>Want to Read- Active</p>
+            <p>Star Rating- Active</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Remove from your to-read shelf." appears as tagline</li>
-                    </ul>
+                    <li>Fills in hovered on Star with yellow along with all the stars in front of it</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
+                    <li>All stars go back to gray</li>
                 </ul>
-                <li>Mouse UP</li>
+                <li>Mouse UP on Last Orange Star</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>Database record flag is set to false</li>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 80 px</li>
-                        <li>Text changes to "Want to Read"</li>
-                    </ul>
+                    <li>Fills in clicked on star with orange along with all the stars in front of it</li>
+                    <li>Fills in the stars after the clicked on star with gray</li>
+                </ul>
+                <li>Mouse UP on Star That is Not the Last Orange Star</li>
+                <ul>
+                    <li>Fills in all stars with gray</li>
                 </ul>
             </ul>
             </div>
             <div class="stars-feedback">
             <h3>Feedback</h3>
-            <p>Want to Read- Default</p>
+            <p>Star Rating- Default</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>Background becomes 10% darker</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Add to your to-read shelf." appears as tagline</li>
-                    </ul>
+                    <li>Fills in hovered on Star with yellow along with all the stars in front of it</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
-                    <li>Background changes back to 10% lighter</li>
+                    <li>All stars go back to gray</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                </ul>
-                <ul>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 100 px</li>
-                        <li>Content changes to a checkmark with the text "Want to Read"</li>
-                    </ul>
+                    <li>Fills in clicked on star with orange along with all the stars in front of it</li>
                 </ul>
             </ul>
-            <p>Want to Read- Active</p>
+            <p>Star Rating- Active</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Remove from your to-read shelf." appears as tagline</li>
-                    </ul>
+                    <li>Fills in hovered on Star with yellow along with all the stars in front of it</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
+                    <li>All stars go back to gray</li>
                 </ul>
-                <li>Mouse UP</li>
+                <li>Mouse UP on Last Orange Star</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 80 px</li>
-                        <li>Text changes to "Want to Read"</li>
-                    </ul>
+                    <li>Fills in clicked on star with orange along with all the stars in front of it</li>
+                    <li>Fills in the stars after the clicked on star with gray</li>
+                </ul>
+                <li>Mouse UP on Star That is Not the Last Orange Star</li>
+                <ul>
+                    <li>Fills in all stars with gray</li>
                 </ul>
             </ul>
             </div>
@@ -317,72 +218,43 @@
             <h2>"Not Interested" Button</h2>
             <div class="ni-triggers">
             <h3>Triggers</h3>
-            <p>Want to Read- Default</p>
+            <p>Not Interested- Default</p>
             <ul>
                 <li>Hover ON</li>
-                <ul>
-                    <li>2 second delay</li>
-                </ul>
                 <li>Hover OFF</li>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>0.2 second delay</li>
-                </ul>
             </ul>
-            <p>Want to Read- Active</p>
+            <p>Interested- Active</p>
             <ul>
                 <li>Hover ON</li>
-                <ul>
-                    <li>2 second delay</li>
-                </ul>
                 <li>Hover OFF</li>
                 <li>Mouse UP</li>
-                <ul>
-                    <li>0.2 second delay</li>
-                </ul>
             </ul>
             </div>
             <div class="ni-rules">
             <h3>Rules</h3>
-            <p>Want to Read- Default</p>
+            <p>Not Interested- Default</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>Background becomes 10% darker</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Add to your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
-                    <li>Background changes back to 10% lighter</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>Database record flag is set to true</li>
-                </ul>
-                <ul>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 100 px</li>
-                        <li>Content changes to a checkmark with the text "Want to Read"</li>
-                    </ul>
+                    <li>Text changes to "Interested"</li>
+                    <li>Font color changes to a medium gray</li>
+                    <li>Overlay appears over div, blurring and fading the background</li>
                 </ul>
             </ul>
-            <p>Want to Read- Active</p>
+            <p>Interested- Active</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Remove from your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
@@ -390,57 +262,36 @@
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>Database record flag is set to false</li>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 80 px</li>
-                        <li>Text changes to "Want to Read"</li>
-                    </ul>
+                    <li>Text changes to "Not Interested"</li>
+                    <li>Font color changes back to turquoise</li>
+                    <li>Overlay disappears, revealing the content underneath</li>
                 </ul>
             </ul>
             </div>
             <div class="ni-feedback">
             <h3>Feedback</h3>
-            <p>Want to Read- Default</p>
+            <p>Not Interested- Default</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>Background becomes 10% darker</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Add to your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes back to pointer</li>
-                    <li>Background changes back to 10% lighter</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                </ul>
-                <ul>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 100 px</li>
-                        <li>Content changes to a checkmark with the text "Want to Read"</li>
-                    </ul>
+                    <li>Text changes to "Interested"</li>
+                    <li>Font color changes to a medium gray</li>
+                    <li>Overlay appears over div, blurring and fading the background</li>
                 </ul>
             </ul>
-            <p>Want to Read- Active</p>
+            <p>Interested- Active</p>
             <ul>
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
-                    <li>2 second delay</li>
-                    <ul>
-                        <li>"Remove from your to-read shelf." appears as tagline</li>
-                    </ul>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
@@ -448,13 +299,9 @@
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 55 px</li>
-                    <li>Text changes to "saving..."</li>
-                    <li>0.2 second delay</li>
-                    <ul>
-                        <li>Button width changes to 80 px</li>
-                        <li>Text changes to "Want to Read"</li>
-                    </ul>
+                    <li>Text changes to "Not Interested"</li>
+                    <li>Font color changes back to turquoise</li>
+                    <li>Overlay disappears, revealing the content underneath</li>
                 </ul>
             </ul>
             </div>
