fixed beta description :pencil2:
clarified some words

--- a/idm241/beta.html
+++ b/idm241/beta.html
@@ -40,11 +40,11 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Button width changes to 135 px</li>
+                        <li>Button width grows to 135 px</li>
                         <li>Content changes to a checkmark with the text "Want to Read"</li>
                     </ul>
                 </ul>
@@ -57,12 +57,12 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 116 px</li>
-                    <li>Text changes to "Want to Read"</li>
+                    <li>Button width shrinks to 116 px</li>
+                    <li>Content changes to just "Want to Read" text</li>
                 </ul>
             </ul>
             </div>
@@ -76,11 +76,11 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Button width changes to 135 px</li>
+                        <li>Button width grows to 135 px</li>
                         <li>Content changes to a checkmark with the text "Want to Read"</li>
                     </ul>
                 </ul>
@@ -93,12 +93,12 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
-                    <li>Button width changes to 116 px</li>
-                    <li>Text changes to "Want to Read"</li>
+                    <li>Button width shrinks to 116 px</li>
+                    <li>Content changes to just "Want to Read" text</li>
                 </ul>
             </ul>
             </div>
@@ -136,8 +136,8 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
-                    <li>All stars go back to gray</li>
+                    <li>Cursor changes to pointer</li>
+                    <li>All stars fade to gray</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -153,8 +153,8 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
-                    <li>All stars go back to gray</li>
+                    <li>Cursor changes to pointer</li>
+                    <li>All stars fade to gray</li>
                 </ul>
                 <li>Mouse UP on Last Orange Star</li>
                 <ul>
@@ -178,8 +178,8 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
-                    <li>All stars go back to gray</li>
+                    <li>Cursor changes to pointer</li>
+                    <li>All stars fade to gray</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -195,8 +195,8 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
-                    <li>All stars go back to gray</li>
+                    <li>Cursor changes to pointer</li>
+                    <li>All stars fade to gray</li>
                 </ul>
                 <li>Mouse UP on Last Orange Star</li>
                 <ul>
@@ -241,7 +241,7 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -258,12 +258,12 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
                     <li>Text changes to "Not Interested"</li>
-                    <li>Font color changes back to turquoise</li>
+                    <li>Font color changes to turquoise</li>
                     <li>Overlay disappears, revealing the content underneath</li>
                 </ul>
             </ul>
@@ -278,7 +278,7 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -295,12 +295,12 @@
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
-                    <li>Cursor changes back to pointer</li>
+                    <li>Cursor changes to pointer</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
                     <li>Text changes to "Not Interested"</li>
-                    <li>Font color changes back to turquoise</li>
+                    <li>Font color changes to turquoise</li>
                     <li>Overlay disappears, revealing the content underneath</li>
                 </ul>
             </ul>
