--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="nav">
-    <a href="idm241/alpha.html"><h2>Alpha</h2></a>
+    <a href="idm241/alpha.html"><h2>Alpha Description</h2></a>
     <a href="idm241/alpha/build.html"><h2>Alpha Build</h2></a>
-    <a href="idm241/beta.html"><h2>Beta</h2></a>
+    <a href="idm241/beta.html"><h2>Beta Description</h2></a>
+    <a href="idm241/beta/build.html"><h2>Beta Build</h2></a>
     </div>
 </body>
 </html>
