--- a/idm241/beta/build.html
+++ b/idm241/beta/build.html
@@ -5,12 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--link rel="icon" href="alpha.png"-->
     <title>Beta</title>
-    <link rel="stylesheet" href="beta/beta.css">
+    <link rel="stylesheet" href="../beta/beta.css">
 </head>
 <body>
     <h1>Beta</h1>
-    <div class="title">
-        <a href="https://www.goodreads.com/recommendations" target="_blank"><h3>Goodreads Interactive Div</h3></a>
+    <div class="build">
+        <img src="book-cover.png" alt="Book Cover">
+        <div class="wtr-button">
+            <button>Want to Read</button>
+        </div>
+        <!--<div class="stars">
+            <input type="checkbox">
+            <label for="star1">
+            <img src="star.svg" alt="Star">
+            </label>
+            </input>
+            <img src="star.svg" alt="Star">
+            <img src="star.svg" alt="Star">
+            <img src="star.svg" alt="Star">
+            <img src="star.svg" alt="Star">
+        </div>-->
+        <div class="star-rating" id="starRating">
+            <!-- SVG star icons for the rating system -->
+            <div class="star" data-rating="1"></div>
+            <div class="star" data-rating="2"></div>
+            <div class="star" data-rating="3"></div>
+            <div class="star" data-rating="4"></div>
+            <div class="star" data-rating="5"></div>
+        </div>
+        <div class="ni-button">
+            <button>Not Interested</button>
+        </div>
     </div>
     <div class="descriptions">
         <div class="wtr-description">
@@ -314,5 +339,6 @@
     <div class="space">
     <p>&nbsp;</p>
     </div>
+    <script src="beta.js"></script>
 </body>
 </html>
